objects/ssot__PersonAcademicCredential__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicCredentialId__c</fullName>
        <label>Academic Credential</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AchievedDate__c</fullName>
        <label>Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CredentialNameText__c</fullName>
        <label>Credential Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CredentialType__c</fullName>
        <label>Credential Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Person Academic Credential Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuerNameText__c</fullName>
        <label>Issuer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerContactId__c</fullName>
        <label>Learner Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817602130_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonAcademicCredential_AcademicCre_rel</label>
        <referenceTo>ssot__AcademicCredential__dlm</referenceTo>
        <relationshipLabel>PersonAcademicCredential_AcademicCre_rel</relationshipLabel>
        <relationshipName>rel_1719817602130_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291158692_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonAcademicCredential_LearnerCont_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PersonAcademicCredential_LearnerCont_rel</relationshipLabel>
        <relationshipName>rel_1720291158692_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>